@@ -1,0 +1,3 @@
+MSFT,100.0,2010-01-01
+MSFT,100.0,2011-01-01
+MSFT,-200.0,2018-05-02
