@@ -1,0 +1,3 @@
+MSFT,10000.0
+GOOG,10000.0
+AAPL,10000.0
